# panel-visualizer

./: .gitmodules  CMakeLists.txt  panelState  platformio.ini
components/ParticleLife/: CMakeLists.txt
components/VGA/: CMakeLists.txt
lib/Audio/: FrequencySensor.cpp  FrequencySensor.h  WindowBuffer.h  analyzer.h  bucketer.cpp  bucketer.h  bucketer_c.h  fast_log.h  fft.cpp  filter.h  gaincontrol.h  pidcontrol.h  pregain.h  sfft.h
lib/Configlets/: Configlets.cpp  Configlets.h
lib/FrequencySensor/src/: FrequencySensor.cpp  FrequencySensor.h  bucketer.cpp  bucketer.h  fft.h
lib/I2S/src/: DMABuffer.h  I2S.cpp  I2S.h  Log.h
lib/Render/: Render.cpp  Render.h  color.h  params.h
lib/Render/src/: Render.cpp  Render.h  WarpController.h  color.h  params.h
lib/Server/src.bk/: Server.cpp  Server.h
lib/WindowBuffer/src/: WindowBuffer.h
main/: CMakeLists.txt  audio_coef.h  main.cpp
src/: main.cpp
